@@ -1409,46 +1409,6 @@ void Game_window::start_actor_alt
 	for (dir = 0; dir < 8; dir++)
 	{
 		Tile_coord dest = start.get_neighbor(dir);
-#if 0
-		switch (dir)
-		{
-			case north:
-			dest.ty -= 1;
-			break;
-
-			case northeast:
-			dest.ty -= 1;
-			dest.tx += 1;
-			break;
-
-			case east:
-			dest.tx += 1;
-			break;
-
-			case southeast:
-			dest.ty += 1;
-			dest.tx += 1;
-			break;
-
-			case south:
-			dest.ty += 1;
-			break;
-
-			case southwest:
-			dest.ty += 1;
-			dest.tx -= 1;
-			break;
-
-			case west:
-			dest.tx -= 1;
-			break;
-
-			case northwest:
-			dest.ty -= 1;
-			dest.tx -= 1;
-			break;
-		}
-#endif
 		int cx = dest.tx/tiles_per_chunk, cy = dest.ty/tiles_per_chunk;
 		int tx = dest.tx%tiles_per_chunk, ty = dest.ty%tiles_per_chunk;
 
